crates/macro/tests/html-tag-fail.stderr
error: only one checked allowed
  --> $DIR/html-tag-fail.rs:16:40
   |
16 | test_html! { |t23| <input checked=true checked=false /> }
   |                                        ^^^^^^^

error: only one kind allowed
  --> $DIR/html-tag-fail.rs:15:43
   |
15 | test_html! { |t22| <input kind="checkbox" kind="submit" /> }
   |                                           ^^^^

error: only one value allowed
  --> $DIR/html-tag-fail.rs:14:39
   |
14 | test_html! { |t21| <input value="123" value="456" /> }
   |                                       ^^^^^

error: only one attr allowed
  --> $DIR/html-tag-fail.rs:13:34
   |
13 | test_html! { |t20| <input attr=1 attr=2 /> }
   |                                  ^^^^

error: expected valid html element
  --> $DIR/html-tag-fail.rs:11:24
   |
11 | test_html! { |t9| <div>Invalid</div> }
   |                        ^^^^^^^

error: only one root html element allowed
  --> $DIR/html-tag-fail.rs:10:26
   |
10 | test_html! { |t8| <img /></img> }
   |                          ^

error: this close tag has no corresponding open tag
 --> $DIR/html-tag-fail.rs:9:24
  |
9 | test_html! { |t7| <div></span></div> }
  |                        ^^^^^^^

error: this open tag has no corresponding close tag
 --> $DIR/html-tag-fail.rs:8:19
  |
8 | test_html! { |t6| <div></span> }
  |                   ^^^^^

error: only one root html element allowed
 --> $DIR/html-tag-fail.rs:7:30
  |
7 | test_html! { |t5| <div></div><div></div> }
  |                              ^

error: this open tag has no corresponding close tag
 --> $DIR/html-tag-fail.rs:6:19
  |
6 | test_html! { |t4| <div><div></div> }
  |                   ^^^^^

error: this close tag has no corresponding open tag
 --> $DIR/html-tag-fail.rs:5:19
  |
5 | test_html! { |t3| </div> }
  |                   ^^^^^^

error: this open tag has no corresponding close tag
 --> $DIR/html-tag-fail.rs:4:19
  |
4 | test_html! { |t2| <div><div> }
  |                   ^^^^^

error: this open tag has no corresponding close tag
 --> $DIR/html-tag-fail.rs:3:19
  |
3 | test_html! { |t1| <div> }
  |                   ^^^^^
